# game

./: .gitignore  Cargo.toml  README.md  codex_test.txt
.github/workflows/: ci.yml
game-core/: Cargo.toml
game-core/src/: lib.rs
scripts/: package.ps1  start-server.ps1
server/: Cargo.toml
server/src/: lib.rs  main.rs  protocol.rs  rooms.rs
server/tests/: rooms_tests.rs
tauri-app/mobile-ui/: app.js  index.html  styles.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
ui/: package-lock.json  package.json  playwright.config.js  vitest.config.js
ui/e2e/: app-flow.spec.js  start-backend.mjs  static-server.mjs
ui/tests/: ui.test.js
